# magic_sandbox

./: Cargo.toml  README.md  index.html
.github/workflows/: build_wasm.yml
assets/shaders/: custom_material.wgsl
magic_sandbox_lib/: Cargo.toml
magic_sandbox_lib/pkg/: magic_sandbox_lib.d.ts  magic_sandbox_lib.js  magic_sandbox_lib_bg.wasm.d.ts  package.json
magic_sandbox_lib/src/: lib.rs
src/: main.rs
