[package]
name = "magic_sandbox_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
bevy = "0.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "HtmlAnchorElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "XmlHttpRequest"
]}
js-sys = "0.3.45"